# libid3tag

./: .gitignore  .hgignore  .hgtags  CHANGES  CMakeLists.txt  README  compat.c  compat.gperf  compat.h  config.h.in  crc.c  crc.h  debug.c  debug.h  field.c  field.h  file.c  frame.c  frame.h  frametype.c  frametype.gperf  frametype.h  genre.c  genre.dat.in  genre.dat.sed  genre.h  global.h  id3tag.h.in  latin1.c  latin1.h  parse.c  parse.h  render.c  render.h  tag.c  tag.h  ucs4.c  ucs4.h  utf16.c  utf16.h  (+5 more)
patches/: itunes-non-syncsafe.patch  utf16-le-default.patch
